Presentation is now possible when offline (if the webserver is local).

--- a/Presenter.html
+++ b/Presenter.html
@@ -43,6 +43,11 @@
  /* End styling */
 </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script>
+if (!window.jQuery) {
+    document.write('<script src="jquery.min.js"><\/script>');
+}
+</script>
 <script type="text/javascript" src="showdown.js"></script>
 </head>
 <body>
