Fix the problem that does not work well reloading feature (space key) at some browser or environment.

--- a/Presenter.html
+++ b/Presenter.html
@@ -158,6 +158,7 @@ Present.buildPrintPage = function () {
 Present.reload = function() {
     $.ajax({
         url: 'presentation.md',
+        cache: false,
         success: function(data) {
             if (data.length>0) {
                 converter = new Showdown.converter();
