--- a/Presenter.html
+++ b/Presenter.html
@@ -8,6 +8,7 @@
   	padding:0;
   	font-family: helvetica;
     color: white;
+    overflow: hidden;
   }
   div.centered {
   	margin:auto;
@@ -21,7 +22,8 @@
   }
 
   /* My styling here */
-  body {
+  body,
+  .content-holder {
     background: #223;
     background: -webkit-gradient(linear, left top, left bottom, from(#334), to(#112));
     background: -moz-linear-gradient(top,  #334,  #112);
@@ -40,6 +42,18 @@
    code {
        color: rgb(235, 174, 108);
   }
+   .for-print .content-holder {
+        width: 100%;
+        height: 100%;
+        border-collapse: collapse;
+   }
+   .for-print .content-holder.template { display:none; }
+   @media screen {
+       .for-print { display:none; }
+   }
+   @media print {
+       .for-screen { display: none; }
+   }
  /* End styling */
 </style>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
@@ -51,6 +65,7 @@ if (!window.jQuery) {
 <script type="text/javascript" src="showdown.js"></script>
 </head>
 <body>
+<div class="for-screen">
 
 <div class="bg">&nbsp;</div>
 
@@ -65,6 +80,18 @@ if (!window.jQuery) {
 </table>
 
 <div class='slideCount'>Slide X of Y</div>
+</div>
+
+<div class="for-print">
+    <table class="content-holder template">
+    <tr valign=center>
+    <td>
+    <div class='centered'><h2>Foo</h2>
+    </div>
+    </td>
+    </tr>
+    </table>
+</div>
 
 </body>
 </html>
@@ -73,7 +100,7 @@ if (!window.jQuery) {
 var Present = { currentSlide: 0 };
 Present.showSlide = function(slide) {
   Present.currentSlide = slide;
-  $('.centered').html(Present.slides[Present.currentSlide]);
+  $('.for-screen .centered').html(Present.slides[Present.currentSlide]);
   $('.slideCount').html('Slide ' + (Present.currentSlide+1) + ' of ' + Present.slides.length);
 };
 Present.nextSlide = function() {
@@ -86,6 +113,18 @@ Present.prevSlide = function() {
     Present.showSlide(Present.currentSlide-1);
   }
 };
+
+Present.buildPrintPage = function () {
+    var forPrint = $('.for-print');
+    $('.content-holder:not(.template)', forPrint).remove();;
+    var template = $('.content-holder.template', forPrint);
+    $.each(Present.slides, function (_, slide) {
+        var holder = template.clone()
+            .appendTo(forPrint)
+            .removeClass('template');
+        $('.centered', holder).html(slide);
+    });
+}
 
 Present.reload = function() {
     $.ajax({
@@ -116,5 +155,8 @@ $(document).keydown(function(e){
         return false;
     }
 });
+
+// Build print page on demand.
+$(window).bind('beforeprint', Present.buildPrintPage);
 
 </script>
