--- a/Presenter.html
+++ b/Presenter.html
@@ -80,7 +80,7 @@
    }
  /* End styling */
 </style>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
 <script>
 if (!window.jQuery) {
     document.write('<script src="jquery.min.js"><\/script>');
